--- a/example_ticker.html
+++ b/example_ticker.html
@@ -8,7 +8,7 @@
 <link href="example_ticker.css" rel="stylesheet" type="text/css" />
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
-<script src="jquery.zrssfeed.min.js" type="text/javascript"></script>
+<script src="jquery.gfeed.js" type="text/javascript"></script>
 <script src="jquery.vticker.js" type="text/javascript"></script>
 
 <title>RSS Multiple Ticker Example - Using zRSSFeed and vTicker</title>
