--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 <link href="jquery.zrssfeed.css" rel="stylesheet" type="text/css" />
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
-<script src="jquery.zrssfeed.min.js" type="text/javascript"></script>
+<script src="jquery.gfeed.js" type="text/javascript"></script>
 
-<title>zRSSFeed Example</title>
+<title>gFeed Example</title>
 </head>
 <body>
 
-<h1>zRSSFeed Example</h1>
+<h1>gFeed Example</h1>
 
 <script type="text/javascript">
 $(document).ready(function () {
